--- a/index.html
+++ b/index.html
@@ -1,1 +1,177 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page - Nikola Brkovic</title>
+    <link rel="stylesheet" href="styles\style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+    <div class="MyContainer">
+        <div class="header">
+            <p id="naslov">Nikola Brković</p>
+            <p id="podnaslov">Junior Software Engineer</p>
+        </div>
+        <div class="row" id="telo">
+            <div class="col-sm-5" id="left">
+                <div class="test">
+                    <h3>SUMMARY</h3>
+                    <p>
+                    Creative and hardworking final year student of software engineering. Always ready for improving and learning. Interested in sports, cars and mechanics.
+                    </p>
+                </div>
+                <div style="padding-top: 10px" class="test2">
+                    <h3>EDUCATION</h3>
+                    <p id="education">
+                        Ongoing<br>
+                        School of Electrical engineering<br>
+                        University of Belgrade
+                    </p>
+                </div>
+                <div class="test3">
+                    <h3>RELEVANT SKILLS</h3>
+                    <div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                Java | PHP 
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 60%;"></span>
+                            </div>
+                            <div class="col-sm-2">60%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                SQL | GIT
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 60%;"></span>
+                            </div>
+                            <div class="col-sm-2">60%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                JS | Selenium
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 50%;"></span>
+                            </div>
+                            <div class="col-sm-2">50%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                HTML | CSS
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 50%;"></span>
+                            </div>
+                            <div class="col-sm-2">50%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                C | C++
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 40%;"></span>
+                            </div>
+                            <div class="col-sm-2">40%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                Python
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 50%;"></span>
+                            </div>
+                            <div class="col-sm-2">50%</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                WordPress
+                            </div>
+                            <div class="animated-progress col-sm-7">
+                                <span style="width: 60%;"></span>
+                            </div>
+                            <div class="col-sm-2">60%</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="test4">
+                    <h3>PROJECTS</h3>
+                    <p id="education">
+                        <p>
+                            <b>SEP 2022 - API Project</b> - API for web store implemented using Python (Flask), SQLAlchemy, Docker, Swarm.
+                        </p>
+                        <p>
+                            <b>JUN 2022 - Web Application</b> - MVC Web Application for making appointments in beauty salons. Implemented using PHP (CodeIgniter4), HTML5, CSS3, JavaScript, jQuery and ajax.
+                        </p>
+                        <p>
+                            <b>MAY 2021 - WordPress site</b> - Web presentation of Max Strategic company. Implemented in WordPress+Elementor.
+                        </p>
+                        <p>
+                            <b>AVG 2020 - Java Game</b> - Java 2D single player game with tanks, cannons and coins. Multiple settings including number of coins, tanks, additional lives, difficulties, etc. 
+                         </p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-2" id="central">
+                <nav class="navmenu">
+                    <ul>
+                        <li style="padding-bottom:90px"><a href="#" class="active"></a></li>
+                        <li style="padding-bottom:85px"><a href="#"></a></li>
+                        <li style="padding-bottom:300px"><a href="#"></a></li>
+                        <li style="padding-bottom:300px"><a href="#"></a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-sm-5" id="right">
+                <div>
+                    <h3>CONTACT</h3>
+                    <b>GitHub:</b> @nickyyB <br>
+                    <b>Email:</b> nikola.brkovic@yahoo.com <br>
+                    <b>LinkedIn:</b> linkedin.com/in/xxx/
+                </div>
+                <div>
+                    <h3>PROFESSIONAL EXPERIENCE</h3>
+                    <b>SEP 2022–Present</b><br>
+                    <b>IT Consultant | Junior Software Engineer</b><br>
+                    <b>Prodyna Belgrade</b>
+                    <p>
+                        <ul class="roman">
+                            <li>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque, urna vel commodo convallis, enim est convallis libero, eu placerat ipsum libero ut arcu.
+                            </li>
+                            <li>
+                                Curabitur mattis blandit ex eget vehicula. Nam iaculis lorem felis, ut consectetur est suscipit nec. Etiam ut nunc metus. Cras vitae odio eu lectus consequat mollis. Curabitur diam magna, tincidunt a nunc et, imperdiet ultricies mauris. Donec sed lectus et erat accumsan ornare.
+                            </li>
+                            <li>
+                                Integer feugiat, mauris nec vulputate efficitur, augue massa ultrices tellus, eu fringilla risus felis sit amet lorem. 
+                            </li>
+                        </ul>
+                    </p>
+                    <b>MARCH 2020–DEC 2021</b><br>
+                    <b>IT Consultant | Web Developer</b><br>
+                    <b>MaxStrategic Belgrade</b>
+                    <p>
+                        <ul class="roman">
+                            <li>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque, urna vel commodo convallis, enim est convallis libero, eu placerat ipsum libero ut arcu.
+                            </li>
+                            <li>
+                                Curabitur mattis blandit ex eget vehicula. Nam iaculis lorem felis, ut consectetur est suscipit nec. Etiam ut nunc metus. Cras vitae odio eu lectus consequat mollis. Curabitur diam magna, tincidunt a nunc et, imperdiet ultricies mauris. Donec sed lectus et erat accumsan ornare.
+                            </li>
+                            <li>
+                                Integer feugiat, mauris nec vulputate efficitur, augue massa ultrices tellus, eu fringilla risus felis sit amet lorem. 
+                            </li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </div> 
+    </div>
+</body>
+</html>
