--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <p id="education">
                         Ongoing<br>
                         School of Electrical engineering<br>
-                        University of Belgrade
+                        University of Belgrade<br>
+                        <i>Software Engineering</i>
                     </p>
                 </div>
 
@@ -126,7 +127,7 @@
                             </li>
                         </ul>
                     </p>
-                    <b>MARCH 2020–DEC 2021</b><br>
+                    <b>MAR 2020–DEC 2021</b><br>
                     <b>IT Consultant | Web Developer</b><br>
                     <b>MaxStrategic Belgrade</b>
                     <p>
