--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@
                 <div class="left-content">
                     <h3 class="left-title">RELEVANT SKILLS</h3>
                     <div class="row">
-                        <div class="col-sm-4">JAVA &bull; PHP </div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">JAVA &bull; PHP </div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 60%;"></span></div>
+                        <div class="col-xs-1">60%</div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">SQL &bull; GIT </div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">SQL &bull; GIT </div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 60%;"></span></div>
+                        <div class="col-xs-1">60%</div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">JS &bull; Selenium </div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">JS &bull; Selenium </div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 40%;"></span></div>
+                        <div class="col-xs-1">40%</div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">HTML &bull; CSS </div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">HTML &bull; CSS </div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 50%;"></span></div>
+                        <div class="col-xs-1">50%</div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">C &bull; C++ </div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">C &bull; C++ </div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 40%;"></span></div>
+                        <div class="col-xs-1">40%</div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">Python</div>
-                        <div class="animated-progress col-sm-7"> <span style="width: 60%;"></span></div>
-                        <div class="col-sm-1">60%</div>
+                        <div class="col-xs-4">Python</div>
+                        <div class="animated-progress col-xs-7"> <span style="width: 50%;"></span></div>
+                        <div class="col-xs-1">50%</div>
                     </div>
                 </div>
 
@@ -117,32 +117,38 @@
                     <p>
                         <ul class="roman">
                             <li>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque, urna vel commodo convallis, enim est convallis libero, eu placerat ipsum libero ut arcu.
+                                Development of integrated solutions tailored to customers on the basis of Java EE and Open Source technologies
                             </li>
                             <li>
-                                Curabitur mattis blandit ex eget vehicula. Nam iaculis lorem felis, ut consectetur est suscipit nec. Etiam ut nunc metus. Cras vitae odio eu lectus consequat mollis. Curabitur diam magna, tincidunt a nunc et, imperdiet ultricies mauris. Donec sed lectus et erat accumsan ornare.
+                                Provide recommendations for software developments and implementations.
                             </li>
                             <li>
-                                Integer feugiat, mauris nec vulputate efficitur, augue massa ultrices tellus, eu fringilla risus felis sit amet lorem. 
+                                Interface with clients, software professionals and consultants to develop solutions applications.
                             </li>
                         </ul>
                     </p>
-                    <b>MAR 2020–DEC 2021</b><br>
+                    <b>MAR 2021–DEC 2021</b><br>
                     <b>IT Consultant | Web Developer</b><br>
                     <b>MaxStrategic Belgrade</b>
                     <p>
                         <ul class="roman">
                             <li>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque, urna vel commodo convallis, enim est convallis libero, eu placerat ipsum libero ut arcu.
+                                Maintenance, troubleshooting, modification and updating websites.
                             </li>
                             <li>
-                                Curabitur mattis blandit ex eget vehicula. Nam iaculis lorem felis, ut consectetur est suscipit nec. Etiam ut nunc metus. Cras vitae odio eu lectus consequat mollis. Curabitur diam magna, tincidunt a nunc et, imperdiet ultricies mauris. Donec sed lectus et erat accumsan ornare.
+                                Used WordPress, Elementor, PHP, HTML5, CSS3, BootStrap 4 and Vanilla JS.
                             </li>
                             <li>
-                                Integer feugiat, mauris nec vulputate efficitur, augue massa ultrices tellus, eu fringilla risus felis sit amet lorem. 
+                                Maintenance, troubleshooting and modification of network.
+                            </li>
+                            <li>
+                                Database operations.
                             </li>
                         </ul>
                     </p>
+                </div>
+                <div class="right-content">
+                    <h3 class="right-title picture"><img src="assets/profilna.jpg"></h3>
                 </div>
             </div>
         </div>
