--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
                 <div class="left-content">
                     <h3 class="left-title">RELEVANT SKILLS</h3>
                     <div class="row">
-                        <div class="col-xs-4">JAVA &bull; PHP </div>
+                        <div class="col-xs-4 tech">JAVA &bull; PHP </div>
                         <div class="animated-progress col-xs-7"> <span style="width: 60%;"></span></div>
                         <div class="col-xs-1">60%</div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">SQL &bull; GIT </div>
+                        <div class="col-xs-4 tech">SQL &bull; GIT </div>
                         <div class="animated-progress col-xs-7"> <span style="width: 60%;"></span></div>
                         <div class="col-xs-1">60%</div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">JS &bull; Selenium </div>
+                        <div class="col-xs-4 tech">JS &bull; Selenium </div>
                         <div class="animated-progress col-xs-7"> <span style="width: 40%;"></span></div>
                         <div class="col-xs-1">40%</div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">HTML &bull; CSS </div>
+                        <div class="col-xs-4 tech">HTML &bull; CSS </div>
                         <div class="animated-progress col-xs-7"> <span style="width: 50%;"></span></div>
                         <div class="col-xs-1">50%</div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">C &bull; C++ </div>
+                        <div class="col-xs-4 tech">C &bull; C++ </div>
                         <div class="animated-progress col-xs-7"> <span style="width: 40%;"></span></div>
                         <div class="col-xs-1">40%</div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">Python</div>
+                        <div class="col-xs-4 tech">Python</div>
                         <div class="animated-progress col-xs-7"> <span style="width: 50%;"></span></div>
                         <div class="col-xs-1">50%</div>
                     </div>
